--- a/config/machines/levante/catalog/FESOM/tco2559-ng5.yaml
+++ b/config/machines/levante/catalog/FESOM/tco2559-ng5.yaml
@@ -386,7 +386,7 @@ sources:
     driver: netcdf
     description: LRA data monthly at r100
     args:
-      urlpath: /work/bb1153/b382076/LRAv3/FESOM/tco2559-ng5/r100/mon/*tco2559-ng5_r100_mon_????.nc
+      urlpath: /work/bb1153/b382076/LRAv3/FESOM/tco2559-ng5/r100/monthly/*tco2559-ng5_r100_monthly_????.nc
       chunks: {}
       xarray_kwargs:
         decode_times: true
