--- a/config/machines/levante/regrid.yaml
+++ b/config/machines/levante/regrid.yaml
@@ -1,16 +1,13 @@
 weights:
-   path: /work/bb1153/b382075/nextgems/weights
-   template: weights_{model}_{exp}_{source}_{method}_{target}_l{level}.nc
-
+  path: /work/bb1153/b382075/nextgems/weights
+  template: weights_{model}_{exp}_{source}_{method}_{target}_l{level}.nc
 areas:
-   path: /work/bb1153/b382075/nextgems/weights
-   src_template: cell_area_{model}_{exp}_{source}.nc
-   dst_template: cell_area_{grid}.nc
-
+  path: /work/bb1153/b382075/nextgems/weights
+  src_template: cell_area_{model}_{exp}_{source}.nc
+  dst_template: cell_area_{grid}.nc
 cdo-paths:
   download: /work/bb1153/b382075/nextgems/weights
   icon: /pool/data/ICON
-
 target_grids:
   r005: r7200x3600
   r010: r3600x1800
@@ -20,249 +17,292 @@ target_grids:
   r100: r360x180
   r200: r180x90
   r250: r144x72
-
-# extra is an extra special cdo command to be applied before generating the weights
 source_grids:
   IFS:
     tco3999-ng5:
       ICMGG_atm2d:
         path: /work/bm1344/AWI/nextGEMS_Cycle2_IFS/tcogrids/2.8km/tcogrids/tco3999_grid.nc
-        space_coord: ["value"]
+        space_coord:
+        - value
       ICMU_atm2d:
         path: /work/bm1344/AWI/nextGEMS_Cycle2_IFS/tcogrids/2.8km/tcogrids/tco3999_grid.nc
-        space_coord: ["value"]
+        space_coord:
+        - value
       ICMU_atm3d:
         path: /work/bm1344/AWI/nextGEMS_Cycle2_IFS/tcogrids/2.8km/tcogrids/tco3999_grid.nc
-        space_coord: ["value"]
+        space_coord:
+        - value
       interpolated_global:
         path: /work/bb1153/b382075/nextgems/grids/ifs_interpolated5400x2700.nc
-        space_coord: ["lon", "lat"]
-      default:  # default covers all simple cases where this can be computed automatically
-        space_coord: ["lon", "lat"]
-      # lra-r100-day:
-      #   space_coord: ["lon", "lat"]
-      # lra-r100-mon:
-      #   space_coord: ["lon", "lat"]
-  
+        space_coord:
+        - lon
+        - lat
+      default:
+        space_coord:
+        - lon
+        - lat
     tco2559-ng5:
       ICMGG_atm2d:
         path: /work/bm1344/AWI/nextGEMS_Cycle2_IFS/tcogrids//4km/tcogrids/tco2559_grid.nc
-        space_coord: ["value"]
+        space_coord:
+        - value
       ICMU_atm2d:
         path: /work/bm1344/AWI/nextGEMS_Cycle2_IFS/tcogrids/4km/tcogrids/tco2559_grid.nc
-        space_coord: ["value"]
+        space_coord:
+        - value
       ICMU_atm3d:
         path: /work/bm1344/AWI/nextGEMS_Cycle2_IFS/tcogrids/4km/tcogrids/tco2559_grid.nc
-        space_coord: ["value"]
+        space_coord:
+        - value
       interpolated_global:
         path: /work/bb1153/b382075/nextgems/grids/ifs_interpolated5400x2700.nc
-        space_coord: ["lon", "lat"]
-      default:  # # default covers all simple cases where this can be computed automatically
-        space_coord: ["lon", "lat"]
-      # lra-r100-day:
-      #   space_coord: ["lon", "lat"]
-      # lra-r100-mon:
-      #   space_coord: ["lon", "lat"]
-  
+        space_coord:
+        - lon
+        - lat
+      default:
+        space_coord:
+        - lon
+        - lat
     tco1279-orca025:
-      ICMGG_atm2d: 
+      ICMGG_atm2d:
         path: /work/bm1344/AWI/nextGEMS_Cycle2_IFS/tcogrids/9km/tcogrids/tco1279_grid.nc
-        space_coord: ["value"]
-      ICMU_atm2d: 
+        space_coord:
+        - value
+      ICMU_atm2d:
         path: /work/bm1344/AWI/nextGEMS_Cycle2_IFS/tcogrids/9km/tcogrids/tco1279_grid.nc
-        space_coord: ["value"]
-      ICMU_atm3d: 
+        space_coord:
+        - value
+      ICMU_atm3d:
         path: /work/bm1344/AWI/nextGEMS_Cycle2_IFS/tcogrids/9km/tcogrids/tco1279_grid.nc
-        space_coord: ["value"]
-      default:  # # default covers all simple cases where this can be computed automatically
-        space_coord: ["lon", "lat"]
-      # lra-r100-day:
-      #   space_coord: ["lon", "lat"]
-      # lra-r100-mon:
-      #   space_coord: ["lon", "lat"]
-
+        space_coord:
+        - value
+      default:
+        space_coord:
+        - lon
+        - lat
     test-tco2559:
       ICMGG_atm2d:
         path: /work/bm1344/AWI/nextGEMS_Cycle2_IFS/tcogrids/4km/tcogrids/tco2559_grid.nc
-        space_coord: ["value"]
+        space_coord:
+        - value
       ICMU_atm3d:
         path: /work/bm1344/AWI/nextGEMS_Cycle2_IFS/tcogrids/4km/tcogrids/tco2559_grid.nc
-        space_coord: ["value"]
+        space_coord:
+        - value
     test-tco79:
       long:
-        space_coord: ["lon", "lat"]
+        space_coord:
+        - lon
+        - lat
       short:
-        path:  /work/bb1153/b382075/aqua/test_datasets/AQUA_tests/grids/tco79_grid.nc
-        space_coord: ["cell"]
-
+        path: /work/bb1153/b382075/aqua/test_datasets/AQUA_tests/grids/tco79_grid.nc
+        space_coord:
+        - cell
   ICON:
     ngc2009:
-      atm_2d_ml: 
+      atm_2d_ml:
         path: /pool/data/ICON/grids/public/mpim/0015/icon_grid_0015_R02B09_G.nc
-        extra: "-selname,cell_index" 
-        space_coord: ["cell"]
-      atm_2d_ml_R02B09: 
+        extra: -selname,cell_index
+        space_coord:
+        - cell
+      atm_2d_ml_R02B09:
         path: /pool/data/ICON/grids/public/mpim/0015/icon_grid_0015_R02B09_G.nc
-        extra: "-selname,cell_index" 
-        space_coord: ["cell"]
-      atm_2d_ml_R02B08: 
+        extra: -selname,cell_index
+        space_coord:
+        - cell
+      atm_2d_ml_R02B08:
         path: /pool/data/ICON/grids/public/mpim/0033/icon_grid_0033_R02B08_G.nc
-        extra: "-selname,cell_index" 
-        space_coord: ["cell"]
-      oce_200m_atmgrid_R02B09: 
+        extra: -selname,cell_index
+        space_coord:
+        - cell
+      oce_200m_atmgrid_R02B09:
         path: /pool/data/ICON/grids/public/mpim/0015/icon_grid_0015_R02B09_G.nc
-        extra: "-selname,cell_index" 
-        space_coord: ["cell"]
-      intake-esm-test: 
+        extra: -selname,cell_index
+        space_coord:
+        - cell
+      intake-esm-test:
         path: /pool/data/ICON/grids/public/mpim/0015/icon_grid_0015_R02B09_G.nc
-        extra: "-selname,cell_index" 
-        space_coord: ["ncells"]
-      default:  # default covers all simple cases where this can be computed automatically
-        space_coord: ["lon", "lat"]
-      # lra-r100-mon: 
-      #   space_coord: ["lon", "lat"]
-      # lra-r100-day: 
-      #   space_coord: ["lon", "lat"]
+        extra: -selname,cell_index
+        space_coord:
+        - ncells
+      default:
+        space_coord:
+        - lon
+        - lat
     hpx:
       default:
         path: /work/bb1153/b382075/nextgems/grids/icon_hpx{zoom}.nc
-        space_coord: ["pix"]
-  
+        space_coord:
+        - pix
   FESOM:
-    tco3999-ng5:  
+    tco3999-ng5:
       interpolated_global2d:
         path: /work/bb1153/b382075/nextgems/grids/fesom_tco2559_interpolated_2d.nc
-        space_coord: ["lon", "lat"]
+        space_coord:
+        - lon
+        - lat
       interpolated_global_TS:
         path: /work/bb1153/b382075/nextgems/grids/fesom_tco2559_interpolated_3d.nc
-        space_coord: ["lon", "lat"]
+        space_coord:
+        - lon
+        - lat
         vertcoord: depth
       interpolated_global_UV:
         path: /work/bb1153/b382075/nextgems/grids/fesom_tco2559_interpolated_3d.nc
         vertcoord: depth
-        space_coord: ["lon", "lat"]
+        space_coord:
+        - lon
+        - lat
       original_2d:
         path: /work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc
-        space_coord: ["nod2"]
-        extra: 
-          - -setgrid,/work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc 
-          - -selname,cell_area
+        space_coord:
+        - nod2
+        extra:
+        - -setgrid,/work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc
+        - -selname,cell_area
       original_3d:
         path: /work/bb1153/b382075/nextgems/grids/NG5_fesom_mask.nc
-        space_coord: ["nod2"]
+        space_coord:
+        - nod2
         vertcoord: nz1
-        extra: 
-          - -setgrid,/work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc 
-      default:  # default covers all simple cases where this can be computed automatically (eg LRA)
-        space_coord: ["lon", "lat"]
-        
+        extra:
+        - -setgrid,/work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc
+      default:
+        space_coord:
+        - lon
+        - lat
     tco2559-ng5:
       interpolated_global2d:
         path: /work/bb1153/b382075/nextgems/grids/fesom_tco2559_interpolated_2d.nc
-        space_coord: ["lon", "lat"]
+        space_coord:
+        - lon
+        - lat
       interpolated_global_TS:
         path: /work/bb1153/b382075/nextgems/grids/fesom_tco2559_interpolated_3d.nc
         vertcoord: depth
-        space_coord: ["lon", "lat"]
+        space_coord:
+        - lon
+        - lat
       interpolated_global_UV:
         path: /work/bb1153/b382075/nextgems/grids/fesom_tco2559_interpolated_3d.nc
         vertcoord: depth
-        space_coord: ["lon", "lat"]
+        space_coord:
+        - lon
+        - lat
       original_2d:
         path: /work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc
-        space_coord: ["nod2"]
-        extra: 
-          - -setgrid,/work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc 
-          - -selname,cell_area
+        space_coord:
+        - nod2
+        extra:
+        - -setgrid,/work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc
+        - -selname,cell_area
       original_3d:
         path: /work/bb1153/b382075/nextgems/grids/NG5_fesom_mask.nc
-        space_coord: ["nod2"]
+        space_coord:
+        - nod2
         vertcoord: nz1
-        extra: 
-          - -setgrid,/work/bb1153/b382075/nextgems/grids/NG5_griddes_nodes_IFS.nc 
-      default:  # default covers all simple cases where this can be computed automatically (eg LRA)
-        space_coord: ["lon", "lat"]
-
+        extra:
+        - -setgrid,/work/bb1153/b382075/nextgems/grids/NG5_griddes_nodes_IFS.nc
+      default:
+        space_coord:
+        - lon
+        - lat
     test-ng5:
       original_2d:
         path: /work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc
-        space_coord: ["nod2"]
-        extra: 
-          - -setgrid,/work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc 
-          - -selname,cell_area 
+        space_coord:
+        - nod2
+        extra:
+        - -setgrid,/work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc
+        - -selname,cell_area
       original_3d:
         path: /work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc
-        space_coord: ["nod2"]
-        extra: 
-          - -setgrid,/work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc 
-          - -selname,cell_area 
-
+        space_coord:
+        - nod2
+        extra:
+        - -setgrid,/work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc
+        - -selname,cell_area
     test-pi:
       original_2d:
-        path:  /work/bb1153/b382075/aqua/test_datasets/AQUA_tests/grids/pi_griddes_nodes_IFS.nc
-        space_coord: ["nod2"]
+        path: /work/bb1153/b382075/aqua/test_datasets/AQUA_tests/grids/pi_griddes_nodes_IFS.nc
+        space_coord:
+        - nod2
         extra:
-          - -setgrid,/work/bb1153/b382075/aqua/test_datasets/AQUA_tests/grids/pi_griddes_nodes_IFS.nc
-          - -selname,cell_area
-
+        - -setgrid,/work/bb1153/b382075/aqua/test_datasets/AQUA_tests/grids/pi_griddes_nodes_IFS.nc
+        - -selname,cell_area
   MSWEP:
     past:
       default:
-        space_coord: ["lon", "lat"]
-
+        space_coord:
+        - lon
+        - lat
   AVISO:
     ssh-L4:
       default:
-        space_coord: ["longitude", "latitude"]
-  
+        space_coord:
+        - longitude
+        - latitude
   PHC3:
     phc3:
       default:
-        space_coord: ["lon", "lat"]
-  
+        space_coord:
+        - lon
+        - lat
   WOA18:
     woa18_2005_2017:
       default:
         path: /pool/data/AWICM/FESOM2/INITIAL/WOA18/WOA18_2005_2017/woa18_A5B7_t00_04.nc
         vertcoord: depth
-        space_coord: ["lon", "lat"]
-
+        space_coord:
+        - lon
+        - lat
   CERES:
     ebaf-toa42:
       default:
-#        path: /pool/data/ICDC/atmosphere/ceres_ebaf/DATA/CERES_EBAF-TOA_Ed4.2_Subset_200003-202208.nc
-        space_coord: ["lon", "lat"]
+        space_coord:
+        - lon
+        - lat
     ebaf-toa41:
       default:
-        space_coord: ["lon", "lat"]
+        space_coord:
+        - lon
+        - lat
     ebaf-sfc41:
       default:
-        space_coord: ["lon", "lat"]
+        space_coord:
+        - lon
+        - lat
     ebaf-sfc42:
       default:
-        space_coord: ["lon", "lat"]
+        space_coord:
+        - lon
+        - lat
     syn-toa41:
       default:
-        space_coord: ["lon", "lat"]
-
+        space_coord:
+        - lon
+        - lat
   ERA5:
     era5:
       default:
         path: /work/bb1153/b382075/nextgems/grids/n320_unstructured.nc
-        space_coord: ["values"]
-
+        space_coord:
+        - values
   OSI-SAF:
     osi-450:
       nh:
-        space_coord: ["xc", "yc"]
+        space_coord:
+        - xc
+        - yc
         cellareas: /work/bb1153/b382075/nextgems/grids/grid_nh.nc
         cellarea_var: areacello
         mask: /work/bb1153/b382075/nextgems/grids/grid_nh.nc
         mask_var: sftof
       sh:
-        space_coord: ["xc", "yc"]
+        space_coord:
+        - xc
+        - yc
         cellareas: /work/bb1153/b382075/nextgems/grids/grid_sh.nc
         cellarea_var: areacello
         mask: /work/bb1153/b382075/nextgems/grids/grid_nh.nc
         mask_var: sftof
-
