--- a/.github/ISSUE_TEMPLATE/01-bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/01-bug-report.yml
@@ -8,7 +8,7 @@ body:
     attributes:
       value: |
         Thank you for taking the time to fill out this bug report.
-  - type: input
+  - type: dropdown
     id: machine
     attributes:
       label: machine
