--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,6 @@
 # machine dependent configuration file for AQUA
 # so far nothing is really strict
-machine: lumi
+machine: levante
 
 reader: 
   catalog: '{configdir}/machines/{machine}/catalog.yaml'
@@ -8,5 +8,5 @@ reader:
   fixer: '{configdir}/fixes'
 
 cdo:
-  lumi: /users/jvonhar/mambaforge/aqua/bin/cdo
   levante: /home/m/m214003/local/bin/cdo  # CDO 2.2.0 by Uwe Schulzweida (HEALPix support)
+  lumi: /users/jvonhar/mambaforge/aqua/bin/cdo
