--- a/config/fixes/ICON.yaml
+++ b/config/fixes/ICON.yaml
@@ -86,6 +86,21 @@ models:
                     mtnsrf:
                         derived: rsdt-rsut
                         grib: true
+                    t:
+                        source: ta
+                        grib: true
+                    u:
+                        source: ua
+                        grib: true
+                    uo:
+                        source: u
+                        grib: true
+                    v:
+                        source: va
+                        grib: true
+                    vo:
+                        source: v
+                        grib: true
         hpx: 
             default:
                 data_model: false
