--- a/config/machines/levante/catalog/IFS/tco2559-ng5-cycle3.yaml
+++ b/config/machines/levante/catalog/IFS/tco2559-ng5-cycle3.yaml
@@ -1,52 +1,56 @@
 plugins:
   source:
-    - module: intake_xarray
-    - module: gribscan
-
+  - module: intake_xarray
+  - module: gribscan
 sources:
   2D_1h_native:
     driver: zarr
     args:
-      consolidated: False
+      consolidated: false
       urlpath: reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_1h6h_native/json.dir/atm2d.json
   3D_1h6h_native:
     driver: zarr
     args:
-      consolidated: False
+      consolidated: false
       urlpath: reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_1h6h_native/json.dir/atm3d.json
-
   2D_monthly_0.25deg:
     driver: zarr
     args:
-      consolidated: False
-      urlpath: 
+      consolidated: false
+      urlpath:
       - reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_monthly_0.25deg/json.dir/atm2d.json
-      - reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_monthly_0.25deg_p2/json.dir.job/atm2d.json  
+      - reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_monthly_0.25deg_p2/json.dir.job/atm2d.json
   3D_monthly_0.25deg:
     driver: zarr
     args:
-      consolidated: False
-      urlpath: 
+      consolidated: false
+      urlpath:
       - reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_monthly_0.25deg/json.dir/atm3d.json
-      - reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_monthly_0.25deg_p2/json.dir.job/atm3d.json  
-
+      - reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_monthly_0.25deg_p2/json.dir.job/atm3d.json
   2D_monthly_1deg:
     driver: zarr
     args:
-      consolidated: False
-      urlpath: 
+      consolidated: false
+      urlpath:
       - reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_monthly_1deg/json.dir/atm2d.json
       - reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_monthly_1deg_p2/json.dir/atm2d.json
   3D_monthly_1deg:
     driver: zarr
     args:
-      consolidated: False
-      urlpath: 
+      consolidated: false
+      urlpath:
       - reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_monthly_1deg/json.dir/atm3d.json
-      - reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_monthly_1deg_p2/json.dir/atm3d.json  
-
+      - reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_monthly_1deg_p2/json.dir/atm3d.json
   WAM_1h_native:
     driver: zarr
     args:
-      consolidated: False
+      consolidated: false
       urlpath: reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_1h_wam/json.dir/atm2d.json
+  lra-r100-monthly:
+    driver: netcdf
+    description: LRA data monthly at r100
+    args:
+      urlpath: /work/bb1153/b382076/LRAv3/IFS/tco2559-ng5-cycle3/r100/monthly/*tco2559-ng5-cycle3_r100_monthly_????.nc
+      chunks: {}
+      xarray_kwargs:
+        decode_times: true
