--- a/config/machines/levante/catalog/FESOM/tco2559-ng5-cycle3.yaml
+++ b/config/machines/levante/catalog/FESOM/tco2559-ng5-cycle3.yaml
@@ -1,13 +1,3 @@
-# Sources:
-# - node_grid: grid for vertices (also known as nods)
-# - elem_grid: grid for elements (also known as triangles)
-# - 2D_daily_native: atmice_x, atmice_y, atmoce_x, atmoce_y, m_ice, m_snow, MLD1, MLD2, prec, ssh, uice, vice, fw
-# - 2D_1h_native: a_ice, evap, fh, sss, sst
-# - 2D_monthly_native: runoff
-# - 2D_monthly_native_elem: tx_sur, ty_sur
-# - 3D_daily_native: salt, temp, Kv, w
-# - 3D_daily_native_elem: u, v
-
 plugins:
   source:
   - module: intake_xarray
@@ -1689,3 +1679,11 @@ sources:
     driver: netcdf
     metadata:
       source: 3D_daily_native_elem
+  lra-r100-monthly:
+    driver: netcdf
+    description: LRA data monthly at r100
+    args:
+      urlpath: /work/bb1153/b382076/LRAv3/FESOM/tco2559-ng5-cycle3/r100/monthly/*tco2559-ng5-cycle3_r100_monthly_????.nc
+      chunks: {}
+      xarray_kwargs:
+        decode_times: true
