--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -34,14 +34,17 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Provision with Micromamba
-        uses: mamba-org/provision-with-micromamba@v15
+      - name: Setup Micromamba
+        uses: mamba-org/setup-micromamba@v1
         with:
           environment-file: environment.yml
           cache-downloads: true
-          channels: conda-forge,numba
-          channel-priority: flexible
-          extra-specs: |
+          cache-environment: true
+          condarc: |
+            channels:
+              - numba
+              - conda-forge
+          create-args: >-
               python=${{ matrix.python-version }}
       - name: Download and setup tests
         run: |
