new marker for sbatch tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,6 +89,7 @@ testpaths = [
 markers = [
     "aqua: mark test as AQUA framework",
     "slow: tests which are slow",
+    "sbatch: tests which require sbatch",
     "dummy: mark test for dummy diagnostic"
 ]
 
