--- a/config/fixes/ICON.yaml
+++ b/config/fixes/ICON.yaml
@@ -86,6 +86,9 @@ models:
                     mtnsrf:
                         derived: rsdt-rsut
                         grib: true
+                    ocpt:
+                        source: to
+                        grib: true
                     t:
                         source: ta
                         grib: true
