--- a/diagnostics/dummy-diagnostic/env-dummy.yml
+++ b/diagnostics/dummy-diagnostic/env-dummy.yml
@@ -14,6 +14,6 @@ dependencies:
   - pip
   - pip:
     # pip install -e of AQUA itself
-    - -e ./../../ # this is the path to the AQUA root folder
+    - -e ./../../[tests] # this is the path to the AQUA root folder
     # these below are only required for the dummy diagnostic
     # - dummy-pip-package
