--- a/config/machines/levante/catalog/ICON/ngc3028.yaml
+++ b/config/machines/levante/catalog/ICON/ngc3028.yaml
@@ -4,23 +4,24 @@ sources:
       metadata:
         grid: HealPIX
       consolidated: true
-      urlpath: /work/bm1235/k203123/NextGEMS_Cycle3.git/experiments/ngc3028/outdata/ngc3028_PT30M_{{
+      urlpath: 
+        /work/bm1235/k203123/NextGEMS_Cycle3.git/experiments/ngc3028/outdata/ngc3028_PT30M_{{
         zoom }}.zarr
     driver: zarr
     parameters:
       zoom:
         allowed:
-          - 10
-          - 9
-          - 8
-          - 7
-          - 6
-          - 5
-          - 4
-          - 3
-          - 2
-          - 1
-          - 0
+        - 10
+        - 9
+        - 8
+        - 7
+        - 6
+        - 5
+        - 4
+        - 3
+        - 2
+        - 1
+        - 0
         default: 0
         description: zoom resolution of the dataset
         type: int
@@ -29,23 +30,24 @@ sources:
       metadata:
         grid: HealPIX
       consolidated: true
-      urlpath: /work/bm1235/k203123/NextGEMS_Cycle3.git/experiments/ngc3028/outdata/ngc3028_PT3H_{{
+      urlpath: 
+        /work/bm1235/k203123/NextGEMS_Cycle3.git/experiments/ngc3028/outdata/ngc3028_PT3H_{{
         zoom }}.zarr
     driver: zarr
     parameters:
       zoom:
         allowed:
-          - 10
-          - 9
-          - 8
-          - 7
-          - 6
-          - 5
-          - 4
-          - 3
-          - 2
-          - 1
-          - 0
+        - 10
+        - 9
+        - 8
+        - 7
+        - 6
+        - 5
+        - 4
+        - 3
+        - 2
+        - 1
+        - 0
         default: 0
         description: zoom resolution of the dataset
         type: int
@@ -54,23 +56,24 @@ sources:
       metadata:
         grid: HealPIX
       consolidated: true
-      urlpath: /work/bm1235/k203123/NextGEMS_Cycle3.git/experiments/ngc3028/outdata/ngc3028_P1D_{{
+      urlpath: 
+        /work/bm1235/k203123/NextGEMS_Cycle3.git/experiments/ngc3028/outdata/ngc3028_P1D_{{
         zoom }}.zarr
     driver: zarr
     parameters:
       zoom:
         allowed:
-          - 10
-          - 9
-          - 8
-          - 7
-          - 6
-          - 5
-          - 4
-          - 3
-          - 2
-          - 1
-          - 0
+        - 10
+        - 9
+        - 8
+        - 7
+        - 6
+        - 5
+        - 4
+        - 3
+        - 2
+        - 1
+        - 0
         default: 0
         description: zoom resolution of the dataset
         type: int
@@ -78,7 +81,8 @@ sources:
     driver: netcdf
     description: LRA data monthly at r100
     args:
-      urlpath: /work/bb1153/b382076/LRAv3/ICON/ngc3028/r100/monthly/*ngc3028_r100_monthly_????.nc
+      urlpath: 
+        /work/bb1153/b382076/LRAv3/ICON/ngc3028/r100/monthly/*ngc3028_r100_monthly_????.nc
       chunks: {}
       xarray_kwargs:
         decode_times: true
