--- a/config/machines/lumi/catalog.yaml
+++ b/config/machines/lumi/catalog.yaml
@@ -9,3 +9,8 @@ sources:
     driver: yaml_file_cat
     args:
         path: "{{CATALOG_DIR}}/catalog/IFS/main.yaml"
+  NEMO:
+    description: NEMO ocean model
+    driver: yaml_file_cat
+    args:
+        path: "{{CATALOG_DIR}}/catalog/NEMO/main.yaml"
