--- a/config/machines/lumi/regrid.yaml
+++ b/config/machines/lumi/regrid.yaml
@@ -43,7 +43,11 @@ source_grids:
       original_2d:
         path: ../AQUA_tests_short/grids/tco79_grid.nc
         space_coord: ["rgrid"]
-
-
-
-
+  NEMO:
+    tco79-eORCA1:
+      default:
+        path: /pfs/lustrep3/scratch/project_465000454/pool/data/IFS/inputs_de_48r1/nemo/V40/eORCA1_Z75/common/mesh_mask.nc
+        extra:
+          - selname,tmask          
+        space_coord: ["nav_lon", "nav_lat"]
+        
