--- a/environment.yml
+++ b/environment.yml
@@ -10,7 +10,7 @@ channels:
 # please note that some of these dependencies are made explicit on purpose, but are not directly required by conda/mamba
 dependencies:
   - python>=3.9,<3.11
-  - libnetcdf<=4.8.1 
+  - libnetcdf 
   - netcdf4
   - xarray
   - dask
@@ -21,7 +21,7 @@ dependencies:
   - cartopy
   - cfunits
   - metpy
-  - cdo
+  - cdo>=2.2.0 # for healpix support
   - intake-esm<=2021.8.17
   - intake
   - intake-xarray
