--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -48,6 +48,7 @@ jobs:
         uses: mamba-org/setup-micromamba@v1
         with:
           environment-file: environment.yml
+          environment-name: aqua
           cache-downloads: true
           cache-environment: true
           condarc: |
