--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-# Create the ECmean4 environment:
+# Create the environment:
 # mamba env create -f environment.yml 
 # or if you really want to use conda
 # conda env create -f environment.yml
