--- a/environment.yml
+++ b/environment.yml
@@ -10,7 +10,6 @@ channels:
 # please note that some of these dependencies are made explicit on purpose, but are not directly required by conda/mamba
 dependencies:
   - python>=3.9,<3.11
-  - libnetcdf<=4.8.1 
   - netcdf4
   - xarray
   - dask
@@ -22,7 +21,7 @@ dependencies:
   - cfunits
   - metpy
   - cdo
-  - intake-esm<=2021.8.17
+  - intake-esm
   - intake
   - intake-xarray
   - ruamel.yaml
