--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ dependencies = [
     "gribscan",
     "ecCodes",
     "intake",
-    "intake-esm<=2021.8.17",
+    "intake-esm",
     "intake-xarray",
     "jinja2",
     "metpy",
@@ -52,19 +52,19 @@ dependencies = [
 
 [project.optional-dependencies]
 docs = [
-    "sphinx==6.1.*",
-    "sphinx-rtd-theme==1.2.*"
+    "sphinx",
+    "sphinx-rtd-theme"
 ]
 notebooks = [
     "ipykernel",
     "healpy"
 ]
 tests = [
-    "pytest==7.3.*",
-    "pytest-cov==4.0.*",
-    "coverage[toml]==7.2.*",
-    "pandoc==2.*",
-    "pycobertura==3.0.*"
+    "pytest",
+    "pytest-cov",
+    "coverage[toml]",
+    "pandoc",
+    "pycobertura"
 ]
 all = [
     "aqua[docs]",
