ICON fix for teleconnections

--- a/config/fixes/ICON.yaml
+++ b/config/fixes/ICON.yaml
@@ -124,4 +124,23 @@ models:
                     10si:
                         source: 10m_wind_speed
                         src_units: m/s
-                        grib: true 
+                        grib: true
+        ngc3026:
+            default:
+                data_model: false
+                vars:
+                    msl:
+                        source: pres_msl
+                        src_units: Pa
+                        grib: true
+        ngc3028:
+            default:
+                data_model: false
+                vars:
+                    msl:
+                        source: pres_msl
+                        src_units: Pa
+                        grib: true
+                    mtntrf:
+                        derived: -rlut
+                        grib: true
