--- a/config/fixes/ERA5.yaml
+++ b/config/fixes/ERA5.yaml
@@ -19,6 +19,10 @@ models:
                     msl:
                         grib: true
                         source: MSL
+                    sst:
+                        grib: true
+                        source: SSTK
+                        src_units: K
         fdb:
             default:
                 deltat: 86400
