--- a/config/fixes/ERA5.yaml
+++ b/config/fixes/ERA5.yaml
@@ -23,6 +23,9 @@ models:
                         grib: true
                         source: SSTK
                         src_units: K
+                    2t:
+                        grib: true
+                        source: T2M
         fdb:
             default:
                 deltat: 86400
