--- a/.github/ISSUE_TEMPLATE/03-feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/03-feature-request.yml
@@ -2,7 +2,7 @@
 
 name: Feature request
 description: "Ask for a new feature"
-labels: ["improvement, enhancement"]
+labels: ["improvement", "enhancement"]
 body:
   - type: markdown
     attributes:
