--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -2,9 +2,9 @@ name: AQUA tests
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, dev ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, dev ]
   workflow_dispatch:
   schedule:
     - cron: "0 3 * * 1" #run every Monday night at 3AM UTC
