--- a/diagnostics/teleconnections/env-teleconnections.yaml
+++ b/diagnostics/teleconnections/env-teleconnections.yaml
@@ -12,6 +12,7 @@ dependencies:
   - python>=3.9,<3.11
 # these are extra dependencies for teleconnections
   - cartopy # for plotting
+  - healpy # does not work with pip
 # these are needed only for tests
   - python-cdo
 # these are pip-based since it provides more recent versions or packages unavailable on conda-forge
