--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10"]
+        python-version: ["3.10", "3.11"]
     defaults:
       run:
         # NOTE: We must take care with the shell value here. We have steps
