--- a/environment.yml
+++ b/environment.yml
@@ -9,7 +9,7 @@ channels:
   - numba
 # please note that some of these dependencies are made explicit on purpose, but are not directly required by conda/mamba
 dependencies:
-  - python>=3.9,<3.11
+  - python>=3.9
   - netcdf4
   - xarray
   - dask
