--- a/config/machines/lumi/installation/environment_lumi.yml
+++ b/config/machines/lumi/installation/environment_lumi.yml
@@ -8,7 +8,7 @@ channels:
   - conda-forge
 # please note that some of these dependencies are made explicit on purpose, but are not directly required by conda/mamba
 dependencies:
-  - python>=3.9,<3.11
+  - python>=3.9
   - xarray
   - dask
   - numpy
