--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,7 +99,8 @@ markers = [
     "aqua: mark test as AQUA framework",
     "slow: tests which are slow",
     "sbatch: tests which require sbatch",
-    "dummy: mark test for dummy diagnostic"
+    "dummy: mark test for dummy diagnostic",
+    "gsv: mark test that requires ECMWF FDB libraries"
 ]
 
 # This appears to be the correct configuration, but for some reason
