--- a/environment.yml
+++ b/environment.yml
@@ -6,48 +6,14 @@
 name: aqua
 channels:
   - conda-forge
-  - numba
 # please note that some of these dependencies are made explicit on purpose, but are not directly required by conda/mamba
 dependencies:
   - python>=3.9,<3.11
-  - netcdf4
-  - xarray
-  - dask
-  - numpy
-  - numba
   - ecCodes      
-  - matplotlib
-  - cartopy
-  - cfunits
-  - metpy
   - cdo
-  - intake-esm
-  - intake
-  - intake-xarray
-  - ruamel.yaml
-# these below are only required for running notebooks
-  - ipykernel
-  - healpy
-# these below are only required for tests
-  - pytest
-  - pytest-cov
-  - coverage[toml]
-  - pandoc
-  - pycobertura
-# these below are only required for documentation
-  - sphinx
-  - sphinx-rtd-theme
+  - cartopy
 # these are pip-based since it provides more recent versions or packages unavailable on conda-forge
   - pip
   - pip:
-    - sparse
-    - dask_jobqueue
-    - docker
-    - gribscan
-    - smmregrid
-    # get OPA
-    - git+https://oauth2:-nnxqtXxyrs3LrJubtH1@earth.bsc.es/gitlab/digital-twins/de_340/one_pass.git
-    - git+https://github.com/ecmwf/pyfdb.git@master
-    - git+https://oauth2:NrMi_dshtmNeaWy9F3sz@earth.bsc.es/gitlab/digital-twins/de_340/gsv_interface.git
     # pip install -e of AQUA itself
-    - -e .
+    - -e .[tests,notebooks]
