--- a/diagnostics/teleconnections/env-teleconnections.yaml
+++ b/diagnostics/teleconnections/env-teleconnections.yaml
@@ -12,8 +12,8 @@ dependencies:
   - python>=3.9,<3.11
 # these are extra dependencies for teleconnections
 # these are needed only for plots
-  - healpy # does not work with pip
-  - cartopy
+  - healpy # does not work with pip and AQUA at the moment (see #276)
+  - cartopy # suggested to install with conda
 # these are needed only for tests
   - python-cdo
 # these are pip-based since it provides more recent versions or packages unavailable on conda-forge
