--- a/config/machines/lumi/installation/environment_lumi.yml
+++ b/config/machines/lumi/installation/environment_lumi.yml
@@ -19,7 +19,7 @@ dependencies:
   - cfunits
   - metpy
   - cdo
-  - intake-esm
+  - intake-esm>=2023.4.20
   - intake
   - intake-xarray
   - ruamel.yaml
