--- a/environment.yml
+++ b/environment.yml
@@ -21,7 +21,7 @@ dependencies:
   - cfunits
   - metpy
   - cdo
-  - intake-esm
+  - intake-esm>=2023.4.20
   - intake
   - intake-xarray
   - ruamel.yaml
