--- a/environment.yml
+++ b/environment.yml
@@ -6,14 +6,14 @@
 name: aqua
 channels:
   - conda-forge
-# please note that some of these dependencies are made explicit on purpose, but are not directly required by conda/mamba
 dependencies:
   - python>=3.9,<3.11
   - ecCodes      
   - cdo
-  - cartopy
-# these are pip-based since it provides more recent versions or packages unavailable on conda-forge
+# pip install -e of AQUA itself
   - pip
   - pip:
-    # pip install -e of AQUA itself
+    # install both tests suite and notebooks. documentation tools are not mandatory.
+    #- git+ssh://git@github.com/oloapinivad/AQUA.git@v0.1-beta
+    #- aqua[tests,notebooks]
     - -e .[tests,notebooks]
