--- a/diagnostics/teleconnections/config/teleconnections.yaml
+++ b/diagnostics/teleconnections/config/teleconnections.yaml
@@ -1,8 +1,17 @@
 # Configuration file of the teleconnections diagnostic
+#
+# Parameters in common to the teleconnections are:
+#
+# telec_type: 'station' or 'region' choose the 
+#             function to use to compute the teleconnection
+# field: field used to compute the teleconnection
+# grib_code: grib2 code of the field
 
 # NAO coordinates
 NAO:
+  telec_type: 'station'
   field: msl
+  grib_code: 151
   lat1: 37.7
   lon1: -25.7
   lat2: 64.1
@@ -10,7 +19,9 @@ NAO:
 
 # ENSO 3.4 region coordinates 
 ENSO:
+  telec_type: 'region'
   field: sst
+  grib_code: 151159 # degC
   latN:  5
   lonW: -170
   latS: -5
